--- a/examples/multi-agent-separation.ipynb
+++ b/examples/multi-agent-separation.ipynb
@@ -29,8 +29,8 @@
     "\n",
     "Our goal is to find the optimal actions $u_{i,0},\\ldots,u_{0,T-1}$ by solving the optimization problems\n",
     "\n",
-    "\\begin{array}{ll} \\mbox{minimize} & \\sum_{t=0}^{T-1} \\ell (x_{i,t},u_{i,t}) + \\ell_T(x_{i,T})\\\\\n",
-    "\\mbox{subject to} & x_{i,t+1} = A(t,t_0)x_{i,t} + Bu_{i,t}\\\\%, \\quad t=0, \\ldots, T-1\\\\\n",
+    "\\begin{array}{ll} \\text{minimize} & \\sum_{t=0}^{T-1} \\ell (x_{i,t},u_{i,t}) + \\ell_T(x_{i,T})\\\\\n",
+    "\\text{subject to} & x_{i,t+1} = A(t,t_0)x_{i,t} + Bu_{i,t}\\\\%, \\quad t=0, \\ldots, T-1\\\\\n",
     "& x_{i,t}\\in\\mathcal{X},\\quad u_{i,t}\\in\\mathcal{U}, \\quad x_T\\in \\mathcal X_T,\n",
     "%, \\quad \\quad t=0, \\ldots, T\n",
     "\\end{array}\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -68,21 +68,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: gekko in /usr/local/lib/python3.10/dist-packages (1.0.6)\n",
-      "Requirement already satisfied: numpy>=1.8 in /usr/local/lib/python3.10/dist-packages (from gekko) (1.22.4)\n"
+      "Requirement already satisfied: numpy in c:\\users\\aaronjs\\appdata\\roaming\\python\\python313\\site-packages (2.3.1)\n",
+      "Requirement already satisfied: scipy in c:\\users\\aaronjs\\appdata\\roaming\\python\\python313\\site-packages (1.16.0)\n",
+      "Requirement already satisfied: gekko in c:\\users\\aaronjs\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (1.3.0)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\aaronjs\\appdata\\roaming\\python\\python313\\site-packages (3.10.3)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\aaronjs\\appdata\\roaming\\python\\python313\\site-packages (from matplotlib) (1.3.2)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\aaronjs\\appdata\\roaming\\python\\python313\\site-packages (from matplotlib) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\aaronjs\\appdata\\roaming\\python\\python313\\site-packages (from matplotlib) (4.58.4)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\aaronjs\\appdata\\roaming\\python\\python313\\site-packages (from matplotlib) (1.4.8)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\aaronjs\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from matplotlib) (25.0)\n",
+      "Requirement already satisfied: pillow>=8 in c:\\users\\aaronjs\\appdata\\roaming\\python\\python313\\site-packages (from matplotlib) (11.2.1)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\aaronjs\\appdata\\roaming\\python\\python313\\site-packages (from matplotlib) (3.2.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\aaronjs\\appdata\\roaming\\python\\python313\\site-packages (from matplotlib) (2.9.0.post0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\aaronjs\\appdata\\roaming\\python\\python313\\site-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.0.1 -> 25.1.1\n",
+      "[notice] To update, run: C:\\Users\\aaronjs\\AppData\\Local\\Programs\\Python\\Python313\\python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
    "source": [
-    "# PACKAGE IMPORT\n",
-    "!pip install gekko\n",
-    "import scipy\n",
+    "!pip install numpy scipy gekko matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_29956/256646393.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mscipy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mgekko\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mGEKKO\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mIPython\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdisplay\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mclear_output\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
+     ]
+    }
+   ],
+   "source": [
     "import numpy as np\n",
+    "import scipy\n",
     "from gekko import GEKKO\n",
     "from IPython.display import clear_output\n",
     "\n",
-    "np.random.seed(1)\n",
-    "\n",
+    "np.random.seed(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# GLOBAL CONSTANTS\n",
     "dt          =  0.1\n",
     "n           =  0.00113\n",
@@ -261,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "aNy894lVY7TX",
     "pycharm": {
@@ -537,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "Y4M9VgHruhSc"
    },
@@ -661,7 +707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
